--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
 </head>
 <body>
     <h1>My Website </h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Services</a>
+            </li>
+            <li>
+                <a href="#">contact us</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
